# winage

./: .gitignore  CNAME  Cargo.toml  LICENSE.txt  README.md  index.html
.github/workflows/: build.yml  github-actions-demo.yml
.github/workflows/certs/: PKCS7.pfx
i18n/en-US/: winage.ftl
src/: error.rs  identity.rs  lib.rs
winage/: Age.sln  UpgradeLog.htm  age.sln
winage/Age/: Age.aps  Age.cpp  Age.h  Age.rc  Age.vcxproj  AgeDlg.cpp  AgeDlg.h  GenPassDlg.cpp  GenPassDlg.h  stdafx.cpp
winage/AgeSetup/: AgeSetup.vdproj
winage/age/: Age.aps  Age.cpp  Age.h  Age.rc  Age.vcxproj  Age.vcxproj.filters  AgeDlg.cpp  AgeDlg.h  ConfirmPassDlg.cpp  ConfirmPassDlg.h  GenPassDlg.cpp  GenPassDlg.h  resource.h
winage/age/res/: Age.rc2
winage/ageSetup/: AgeSetup.vdproj
