[package]
name = "winage"
version = "0.1.0"
authors = ["Theron <tspiegl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = { version = "0.6.0", features = ["armor", "cli-common", "plugin"] }
rand = "0.7"
secrecy = "0.7"
i18n-embed = { version = "0.12", features = ["desktop-requester", "fluent-system"] }
i18n-embed-fl = "0.5"
rust-embed = "5"
lazy_static = "1"

[lib]
crate_type = ["staticlib"]
