[package]
name = "winage"
version = "1.0.0"
authors = ["Theron <tspiegl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = { version = "0.6.0", features = ["armor", "cli-common", "plugin", "ssh"] }
rand = "0.7"
secrecy = "0.7"
chrono = "0.4"

[lib]
crate_type = ["staticlib"]
